# df-derive

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
benches/: 01_top_level_vec.rs  02_empty_nested_vec.rs  03_nested_option.rs  04_vec_custom_struct.rs  05_wide_top_level_options.rs  06_optional_vec_custom_struct.rs  07_deep_nesting_vec.rs  08_complex_wrappers.rs  09_generics.rs  10_string_columns.rs  11_slow_path_shapes.rs  12_tuple_structs.rs  15_as_str_enum.rs  16_option_vec_option_struct.rs  17_vec_vec_struct.rs  18_as_binary.rs  19_naive_and_duration.rs  20_smart_pointers.rs  21_tuple_fields.rs
df-derive/: Cargo.toml
df-derive-core/: Cargo.toml
df-derive-core/src/: lib.rs
df-derive-core/tests/: decimal128_contract.rs
df-derive-macros/: Cargo.toml
df-derive-macros/src/: diagnostics.rs  ir.rs  lib.rs  parser.rs  type_analysis.rs
df-derive-macros/src/attrs/: container.rs  decimal.rs  field.rs  field_conflicts.rs  mod.rs  spanned.rs
df-derive-macros/src/codegen/: access.rs  asserts.rs  bounds.rs  column_emit.rs  columnar_impl.rs  config.rs  external_paths.rs  helpers.rs  mod.rs  names.rs  nested.rs  polars_paths.rs  schema.rs  schema_nested.rs  source_access.rs  strategy.rs  support.rs  trait_impl.rs  type_deps.rs  type_registry.rs
df-derive-macros/src/codegen/encoder/: access_chain.rs  ctx.rs  emit.rs  idents.rs  leaf.rs  leaf_kind.rs  mod.rs  nested.rs  nested_columns.rs  option.rs  projected.rs  shape_walk.rs  stringy.rs  tuple.rs  vec.rs
df-derive-macros/src/codegen/encoder/idents/: layers.rs  mod.rs  nested.rs  primitive.rs  support.rs  tuple.rs
df-derive-macros/src/codegen/encoder/tuple/: entries.rs  mod.rs  nested.rs  projection.rs  standard.rs  vec_parent.rs
df-derive-macros/src/codegen/type_registry/: logical_dtype.rs  mod.rs  numeric.rs  scalar_transform.rs
df-derive-macros/src/ir/: access.rs  columns.rs  leaf.rs  mod.rs  names.rs  non_empty.rs  structs.rs  tuple.rs  visit.rs  wrappers.rs
df-derive-macros/src/lower/: binary.rs  columns.rs  decimal.rs  field.rs  leaf.rs  mod.rs  projection.rs  tuple.rs  validation.rs  wrappers.rs
df-derive-macros/src/lower/errors/: binary.rs  leaf.rs  mod.rs  tuple.rs  validation.rs
df-derive-macros/src/type_analysis/: diagnostics.rs  known_types.rs  mod.rs  path_match.rs  wrappers.rs
df-derive-runtime/: Cargo.toml
df-derive-runtime/src/: lib.rs
df-derive-test-harness/: Cargo.toml  README.md
df-derive-test-harness/src/: lib.rs
df-derive-test-harness/tests/: contract.rs
df-derive/benches/: 05_wide_top_level_options.rs  06_optional_vec_custom_struct.rs  07_deep_nesting_vec.rs  11_slow_path_shapes.rs  13_datetime_decimal_columns.rs  14_as_string_enum.rs  16_option_vec_option_struct.rs  21_tuple_fields.rs  22_cost_model_passes.rs  instruction_counts.rs
df-derive/benches/support/: mod.rs
df-derive/examples/: README.md  as_string.rs  deep_vec.rs  multi_option_vec.rs  nested_options.rs  quickstart.rs
df-derive/src/: lib.rs
df-derive/tests/: architecture.rs  clippy_unsafe_derive_deserialize.rs  codegen_path_centralization.rs  common.rs  generated_lint_hygiene.rs  idents_centralization.rs  local_runtime.rs  progress.rs  runtime_semantics.rs
df-derive/tests/fail/: 100-fail-unknown-field-attribute.rs  100-fail-unknown-field-attribute.stderr  101-fail-decimal-on-non-decimal.rs  101-fail-decimal-on-non-decimal.stderr  102-fail-time-unit-on-non-datetime.stderr  103-fail-time-unit-invalid-value.rs  104-fail-decimal-precision-out-of-range.stderr  105-fail-decimal-with-as-string.stderr  106-fail-as-str-on-non-string-base.stderr  107-fail-as-binary-bare-u8.rs  108-fail-as-binary-option-u8.stderr  109-fail-as-binary-vec-option-u8.stderr  111-fail-as-binary-on-string.stderr  112-fail-as-binary-with-as-string.stderr  113-fail-as-binary-with-as-str.stderr  114-fail-as-binary-with-decimal.stderr  115-fail-as-binary-with-time-unit.rs  115-fail-as-binary-with-time-unit.stderr  116-fail-bare-duration-ambiguous.rs  116-fail-bare-duration-ambiguous.stderr  119-fail-cow-bytes-without-as-binary.stderr  121-fail-unit-tuple-field.stderr  122-fail-as-str-on-tuple.rs  122-fail-as-str-on-tuple.stderr  123-fail-as-string-on-tuple.rs  123-fail-as-string-on-tuple.stderr  124-fail-as-binary-on-tuple.stderr  125-fail-decimal-on-tuple.stderr  126-fail-time-unit-on-tuple.rs  126-fail-time-unit-on-tuple.stderr  127-fail-external-time-duration.rs  129-fail-borrowed-bytes-without-as-binary.rs  129-fail-borrowed-bytes-without-as-binary.stderr  132-fail-as-str-concrete-type-without-as-ref.stderr  133-fail-skip-with-conversion-attr.rs  133-fail-skip-with-conversion-attr.stderr  134-fail-as-string-concrete-type-without-display.rs  134-fail-as-string-concrete-type-without-display.stderr  135-fail-wrapped-nested-tuple-parent.rs  135-fail-wrapped-nested-tuple-parent.stderr  (+35 more)
df-derive/tests/pass/: 03-options-and-nulls.rs  04-empty-struct.rs  07-edge-cases-test.rs  08-vec-custom-struct-test.rs  09-vec-custom-struct-edge-cases.rs  11-large-scale-stress.rs  14-decimal-datetime.rs  18-custom-trait.rs  19-complex-wrappers.rs  22-as-str-on-struct.rs  25-doubly-optional-nested.rs  26-generics-no-clone.rs  29-decimal128-encode-trait.rs  34-doubly-optional-primitive.rs  42-naive-datetime.rs  44-cow-unsized.rs  46-datetime-timezones.rs  47-option-access-chain-no-clone.rs  48-runtime-override-combinations.rs
df-derive/tests/runtime/: 28-option-vec-struct-validity.rs  38-smart-pointers.rs  39-tuple-fields.rs  47-nonzero-numerics.rs  49-generic-shadowing-and-bounds.rs  50-qualified-custom-name-collisions.rs  51-qualified-custom-wrapper-collisions.rs  52-skip-field.rs  53-associated-type-paths.rs  54-raw-ident-column-names.rs  55-manual-nested-validation.rs  56-as-string-fmt-error.rs  57-mixed-row-behavior-lock.rs  58-mixed-wrapper-shape-row.rs  59-tuple-vector-projection.rs
docs/: README.md  encoder-ir.md
examples/: README.md  as_string.rs  datetime_decimal.rs  deep_vec.rs  generics.rs  multi_option_vec.rs  nested.rs  nested_generics.rs  nested_options.rs  quickstart.rs  tuple.rs  vec_custom.rs
(+139 files in other folders)
