[package]
name = "df-derive"
version = "0.3.0"
edition = "2024"
authors = ["Giovanni Ramistella <letter.brigade_7s@icloud.com>"]
description = "Procedural derive macro for efficiently converting Rust structs into Polars DataFrames."
license = "MIT"
repository = "https://github.com/gramistella/df-derive"
homepage = "https://github.com/gramistella/df-derive"
documentation = "https://docs.rs/df-derive"
keywords = ["polars", "dataframe", "proc-macro", "finance"]
categories = ["data-structures", "finance"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["derive"] }
proc-macro-crate = "3.5.0"

[dev-dependencies]
trybuild = "1.0.116"
polars = { version = "0.53.0", features = ["timezones", "dtype-decimal"] }
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = { version = "1.41.0", features = ["serde"] }
criterion = { version = "0.8.2", features = ["html_reports"] }

[profile.bench]
opt-level = 3
codegen-units = 1
incremental = false
debug = false
lto = false

[[bench]]
name = "01_top_level_vec"
harness = false

[[bench]]
name = "02_empty_nested_vec"
harness = false

[[bench]]
name = "03_nested_option"
harness = false

[[bench]]
name = "04_vec_custom_struct"
harness = false

[[bench]]
name = "05_wide_top_level_options"
harness = false

[[bench]]
name = "06_optional_vec_custom_struct"
harness = false

[[bench]]
name = "07_deep_nesting_vec"
harness = false

[[bench]]
name = "08_complex_wrappers"
harness = false

[[bench]]
name = "09_generics"
harness = false

[[bench]]
name = "10_string_columns"
harness = false

[[bench]]
name = "11_slow_path_shapes"
harness = false

[[bench]]
name = "12_tuple_structs"
harness = false

[[bench]]
name = "13_datetime_decimal_columns"
harness = false

[[bench]]
name = "14_as_string_enum"
harness = false
