[workspace]
members = ["df-derive", "df-derive-core", "df-derive-macros"]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Giovanni Ramistella <letter.brigade_7s@icloud.com>"]
license = "MIT"
repository = "https://github.com/gramistella/df-derive"
homepage = "https://github.com/gramistella/df-derive"

[workspace.dependencies]
polars = "0.53.0"
polars-arrow = "0.53.0"
rust_decimal = { version = "1.41.0", features = ["serde"] }
df-derive-core = { version = "0.3.0", path = "df-derive-core" }
df-derive-macros = { version = "0.3.0", path = "df-derive-macros" }

[profile.bench]
opt-level = 3
codegen-units = 1
incremental = false
debug = false
lto = false
