[package]
name = "df-derive-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared dataframe runtime trait identity for df-derive."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/df-derive-core"
readme = "../README.md"
keywords = ["polars", "dataframe", "df-derive", "decimal"]
categories = ["data-structures"]

[dependencies]
polars = { workspace = true, features = ["timezones", "dtype-date", "dtype-time", "dtype-duration", "dtype-decimal"] }
rust_decimal = { workspace = true, optional = true }

[features]
default = ["rust_decimal"]
rust_decimal = ["dep:rust_decimal"]
