[package]
name = "df-derive-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared dataframe runtime trait identity for df-derive."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/df-derive-core"
readme = "../README.md"
keywords = ["polars", "dataframe", "df-derive", "decimal"]
categories = ["data-structures"]

[dependencies]
polars = { workspace = true, features = ["timezones", "dtype-date", "dtype-datetime", "dtype-time", "dtype-duration", "dtype-decimal", "dtype-i8", "dtype-i16", "dtype-i128", "dtype-u8", "dtype-u16", "dtype-u128"] }
polars-arrow.workspace = true
rust_decimal = { workspace = true, optional = true }

[features]
default = ["rust_decimal"]
rust_decimal = ["dep:rust_decimal"]
