[package]
name = "df-derive-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Canonical `dataframe` trait module and reference `Decimal128Encode for rust_decimal::Decimal` impl for use with `df-derive`."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/df-derive-runtime"
readme = "../README.md"
keywords = ["polars", "dataframe", "df-derive", "decimal"]
categories = ["data-structures"]

[dependencies]
polars = { workspace = true, features = ["timezones", "dtype-date", "dtype-time", "dtype-duration", "dtype-decimal"] }
polars-arrow.workspace = true
rust_decimal = { workspace = true, optional = true }

[features]
default = ["rust_decimal"]
rust_decimal = ["dep:rust_decimal"]
