[package]
name = "df-derive-test-harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Contract test harness for `df-derive`'s `Decimal128Encode` trait. Validates that a custom decimal backend rounds half-to-even, matching polars's `str_to_dec128`."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["polars", "decimal", "testing", "df-derive"]
categories = ["development-tools::testing"]
publish = false

[dependencies]
polars = { workspace = true, features = ["dtype-decimal"] }

[dev-dependencies]
rust_decimal.workspace = true
